fix cart collapse

--- a/src/assets/layout.scss
+++ b/src/assets/layout.scss
@@ -19,12 +19,3 @@
     width: 100%;
   }
 }
-
-
-.similar-product {
-  &:hover {
-    .like-btn {
-      @apply block
-    }
-  }
-}
